# neuronsw

./: .gitignore  Makefile  README.md  output.csv  pyproject.toml
notebooks/: explorative_data_analysis.ipynb  solution.ipynb
src/: setup.py
src/trams/: config.py  config.yaml  datamodule.py  dataset.py  load_data.py  model.py  predict.py  train_model.py  utils.py
src/trams/trained_model/: model.ckpt
