[tool.poetry]
name = "NeuronSW project"
version = "0.1.0"
description = ""
authors = ["Miroslav Mlynarik <miroslav.mlynarik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"
numpy = "1.20.0"
torch = "2.0.0"
torchaudio = "2.0.1"
lightning = "2.0.3"
transformers = "4.30.2"
wandb = "0.15.9"
jsonargparse = "4.23.1"
huggingface-download-cli = "1.0.3"
datasets = {version = "2.14.0", extras = ["audio"]}
src = {path = "src", develop = true}
numba = "0.56.0"
jsonlines = "^4.0.0"
ipython = "^8.15.0"
ipykernel = "^6.25.2"
ipywidgets = "^8.1.0"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pycodestyle = "2.10.0"
pre-commit = "2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
